url + json task completed